Finished unit testing

--- a/LocationReminder/app/src/main/res/layout/activity_reminder_description.xml
+++ b/LocationReminder/app/src/main/res/layout/activity_reminder_description.xml
@@ -21,7 +21,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_top"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="@dimen/margin_normal"
             android:text="@{@string/detail_title(reminderDataItem.title)}"
             android:textSize="@dimen/text_size_large"
@@ -32,7 +32,7 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginTop="24dp"
             android:text="@{@string/detail_description(reminderDataItem.description)}"
             android:textSize="@dimen/text_size_large"
             app:layout_constraintStart_toStartOf="@+id/title"
@@ -42,7 +42,7 @@
             android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginTop="24dp"
             android:text="@{@string/detail_location(reminderDataItem.location)}"
             android:textSize="@dimen/text_size_large"
             app:layout_constraintStart_toStartOf="@+id/description"
@@ -52,7 +52,7 @@
             android:id="@+id/coordinates"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginTop="24dp"
             android:text="@{@string/lat_long_snippet(reminderDataItem.latitude, reminderDataItem.longitude)}"
             android:textSize="@dimen/text_size_large"
             app:layout_constraintStart_toStartOf="@+id/location"
