--- a/LocationReminder/app/src/main/res/layout/activity_reminder_description.xml
+++ b/LocationReminder/app/src/main/res/layout/activity_reminder_description.xml
@@ -7,7 +7,7 @@
         <!--Data item that holds the reminder details-->
         <variable
             name="reminderDataItem"
-            type="com.udacity.reminder.locationreminders.reminderslist.ReminderDataItem" />
+            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
