Updated layout files to match starter project

--- a/LocationReminder/app/src/main/res/layout/fragment_select_location.xml
+++ b/LocationReminder/app/src/main/res/layout/fragment_select_location.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+        <!-- Map fragment for the user to select the location -->
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/mapFragment"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -25,6 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Save button for the user to save the selected location -->
         <Button
             android:id="@+id/save_btn"
             android:layout_width="match_parent"
